# databricks_dab

.github/workflows/: cicd.yml
dab/: databricks.yml
dab/.github/workflows/: cicd.yml
dab/clusters/: dab_clusters.yml
dab/notebooks/: hello.ipynb  hello_2.ipynb
dab/resources/: dab.job.yml  job_1.job.yml  job_2.job.yml
jobs_as_code/: README.md  databricks.yml  pyproject.toml  setup.py
jobs_as_code/resources/: jobs_as_code_job.py
jobs_as_code/src/: notebook.ipynb
q_a/: README.md
q_a/azure_devops/: README.md  azure-pipelines.yml  databricks.yml
q_a/azure_devops/resources/: azure_devops.job.yml
q_a/azure_devops/src/: notebook.ipynb
q_a/azure_devops_sp/: README.md  azure-pipelines.yml  databricks.yml
q_a/azure_devops_sp/resources/: azure_devops_sp.job.yml
q_a/azure_devops_sp/src/: notebook.ipynb
wheel_poetry/: README.md  databricks.yml  pyproject.toml
wheel_poetry/resources/: wheel_poetry.job.yml
wheel_poetry/src/: notebook.ipynb
wheel_poetry_multi/: README.md  databricks.yml
wheel_poetry_multi/my_functions/consumer/src/consumer/: main.py
wheel_poetry_multi/resources/: wheel_poetry_multi.job.yml
wheel_poetry_multi/tests/: main_test.py
wheel_simple/: README.md  databricks.yml  setup.py
wheel_simple/resources/: wheel_simple.job.yml
wheel_simple/src/: notebook.ipynb
wheel_simple/tests/: main_test.py
wheel_uv/: README.md  databricks.yml
wheel_uv/my_functions/consumer/: pyproject.toml
wheel_uv/my_functions/mymath/: pyproject.toml
wheel_uv/resources/: wheel_uv.job.yml
wheel_uv/src/: notebook.ipynb
(+1 files in other folders)
